--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,9 @@ jobs:
         with:
           python-version: '3.10'
       - name: Install poetry
-        uses: snok/install-poetry@v1
+        env:
+          PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
+        run: pip install poetry
       - name: Load cached venv
         id: cached-poetry-dependencies
         uses: actions/cache@v3
@@ -20,8 +22,6 @@ jobs:
           key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
       - name: Install dependencies
         if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
-        env:
-          PYTHON_KEYRING_BACKEND: keyring.backends.null.Keyring
         run: poetry install --no-interaction
       - name: Run tests
         run: poetry run pytest
